<u>Version 1.51 RC 2  (2015-02-27)</u>
- added check for empty $options[5] element (mamba)
- more PSR-2 updates (mamba)
- added requirement for XOOPS 2.5.7.1

<u>Version 1.51 RC 1  (2015-02-24)</u>
- adjusted Help files (mamba)
- PSR-2 updates (mamba)
- using XooopsRequest (mamba)
- replaced exit() with Exceptions (mamba)

<u>Version 1.51 Beta 3  (2015-02-23)</u>
- TODO: use Xmf libraries
- TODO: reintroduce hooks ...
- TODO: create infinite levels menu
- TODO: inline edit link vars
- fixed bug in update procedure (luciorota)
- added treemenu (LioMJ)
- standardize module to latest code style standards (luciorota)
- merged @zyspec and @luciorota code (luciorota)

<u>Version 1.51 Beta 2  (2015-02-19)</u>
- change to use XOOPS jquery js from Frameworks (zyspec)
- cleaned up skins directories to use common structure (/css, /images) (zyspec)
- fixed bug in rendering menucss in block (zyspec)
- added tw_red skin, inadvertently removed in previous release (zyspec)
- added mid KEY for SQL to improve performance for common queries (zyspec)
- normalized icons16 & icons32 definitions similar to other XOOPS modules (zyspec)
- more code cleanup (zyspec)

<u>Version 1.51 Beta 1  (2015-01-20)</u>
- fixed bug where editing menu item put item in 1st menu (zyspec)
- fixed reference to JS files since moved to /assets (zyspec)
- fixed/improve menu HTML rendering so it can validate (zyspec)
- moved ./skins/clean/template.tpl to ./skins/clean/templates subdirectory (zyspec)
- moved ./skins/breadcrumb/template.tpl to ./skins/breadcrumb/templates subdirectory (zyspec)
- updated from dirname(__FILE__) to PHP 5.3 __DIR__ (zyspec)
- updated jquery to v1.11.2 (zyspec)
- updated hoverIntent to v1.81 (zyspec)
- updated supersubs to v3.0 (zyspec)
- updated superfish to v1.7.5 (zyspec)
- general code cleanup (zyspec)

<u>Version 1.5 Beta 4  (2014-04-23)</u>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
