@@ -18,8 +18,9 @@
  * @version         $Id: links.php
  */
 
-$currentFile = basename(__FILE__);
 include_once __DIR__ . '/admin_header.php';
+
+$currentFile = basename(__FILE__);
 
 $mymenusTpl       = new XoopsTpl(); // will be removed???
 $mymenusAdminPage = 'links.php'; // will be removed???
@@ -196,7 +197,7 @@ class MymenusLinksUtilities
         $linksCriteria->setSort('weight');
         $linksCriteria->setOrder('ASC');
         //
-        $menusArray = array();
+//        $menusArray = array();
         if (($linksCount > 0) && ($linksCount >= (int)$start)) {
             $linksCriteria->setStart((int)$start);
             $linksArrays = $mymenus->getHandler('links')->getObjects($linksCriteria, false, false); // as array
@@ -317,10 +318,10 @@ class MymenusLinksUtilities
         $xoopsLogger->activated = false;
         error_reporting(0);
 
-        global $pathIcon16;
+        $pathIcon16 = $GLOBALS['xoops']->url('www/' . $GLOBALS['xoopsModule']->getInfo('systemIcons16'));
 
-        $registry =& MymenusRegistry::getInstance();
-        $plugin   =& MymenusPlugin::getInstance();
+//        $registry =& MymenusRegistry::getInstance();
+//        $plugin   =& MymenusPlugin::getInstance();
 
         $linksObj = $mymenus->getHandler('links')->get((int)$id);
 
@@ -350,7 +351,7 @@ class MymenusLinksUtilities
         if (count($menusList) > 1) {
             // display menu options (if more than 1 menu available
             if (!($linksObj->getVar('mid'))) { // initial menu value not set
-                $menuValues = array_flip($menusList);
+//                $menuValues = array_flip($menusList);
                 $formmid    = new XoopsFormSelect(_AM_MYMENUS_MENU_MENU, 'mid', $mid);//array_shift($menuValues));
             } else {
                 $formmid = new XoopsFormSelect(_AM_MYMENUS_MENU_MENU, 'mid', $linksObj->getVar('mid'));
