@@ -18,9 +18,7 @@
  * @version         $Id: menu.php
  */
 
-if(!defined('XOOPS_ROOT_PATH')) {
-    throw new Exception('XOOPS root path not defined');
-}
+defined('XOOPS_ROOT_PATH') || exit('XOOPS root path not defined');
 
 $moduleDirName = basename(dirname(__DIR__));
 $moduleHandler = &xoops_gethandler("module");
