@@ -18,9 +18,7 @@
  * @version         $Id: mymenus.php 12940 2015-01-21 17:33:38Z zyspec $
  */
 
-if (!defined('XOOPS_ROOT_PATH')) {
-    throw new Exception('XOOPS root path not defined');
-}
+defined('XOOPS_ROOT_PATH') || exit('XOOPS root path not defined');
 
 /**
  * Class MymenusMymenusPluginItem
