@@ -18,9 +18,7 @@
  * @version         $Id: smarty.php 12944 2015-01-23 13:05:09Z beckmi $
  */
 
-if(!defined('XOOPS_ROOT_PATH')) {
-    throw new Exception('XOOPS root path not defined');
-}
+defined('XOOPS_ROOT_PATH') || exit('XOOPS root path not defined');
 
 /**
  * Class SmartyMymenusPluginItem
